--- a/docs/Show-ADTInstallationWelcome.mdx
+++ b/docs/Show-ADTInstallationWelcome.mdx
@@ -7,7 +7,7 @@ hide_table_of_contents: false
 
 ## SYNOPSIS
 
-Show a welcome dialog prompting the user with information about the installation and actions to be performed before the installation can begin.
+Show a welcome dialog prompting the user with information about the deployment and actions to be performed before the deployment can begin.
 
 ## SYNTAX
 
@@ -35,9 +35,9 @@ Show-ADTInstallationWelcome [-CloseProcesses <ProcessObject[]>] [-Silent] [-Clos
 
 The following prompts can be included in the welcome dialog:
     a) Close the specified running applications, or optionally close the applications without showing a prompt (using the -Silent switch).
-    b) Defer the installation a certain number of times, for a certain number of days or until a deadline is reached.
+    b) Defer the deployment a certain number of times, for a certain number of days or until a deadline is reached.
     c) Countdown until applications are automatically closed.
-    d) Prevent users from launching the specified applications while the installation is in progress.
+    d) Prevent users from launching the specified applications while the deployment is in progress.
 
 ## EXAMPLES
 
@@ -63,7 +63,7 @@ Close Word and Excel without prompting the user.
 Show-ADTInstallationWelcome -CloseProcesses @{ Name = 'winword' }, @{ Name = 'excel' } -BlockExecution
 ```
 
-Close Word and Excel and prevent the user from launching the applications while the installation is in progress.
+Close Word and Excel and prevent the user from launching the applications while the deployment is in progress.
 
 ### EXAMPLE 4
 
@@ -80,7 +80,7 @@ Show-ADTInstallationWelcome -CloseProcesses @{ Name = 'winword' }, @{ Name = 'ms
 ```
 
 Prompt the user to close Word, MSAccess and Excel.
-By using the PersistPrompt switch, the dialog will return to the center of the screen every couple of seconds, specified in the AppDeployToolkitConfig.xml, so the user cannot ignore it by dragging it aside.
+By using the PersistPrompt switch, the dialog will return to the center of the screen every couple of seconds, specified in the config.psd1, so the user cannot ignore it by dragging it aside.
 
 ### EXAMPLE 6
 
@@ -88,17 +88,17 @@ By using the PersistPrompt switch, the dialog will return to the center of the s
 Show-ADTInstallationWelcome -AllowDefer -DeferDeadline '25/08/2013'
 ```
 
-Allow the user to defer the installation until the deadline is reached.
+Allow the user to defer the deployment until the deadline is reached.
 
 ### EXAMPLE 7
 
 ```powershell
 Show-ADTInstallationWelcome -CloseProcesses @{ Name = 'winword' }, @{ Name = 'excel' } -BlockExecution -AllowDefer -DeferTimes 10 -DeferDeadline '25/08/2013' -CloseProcessesCountdown 600
-Close Word and Excel and prevent the user from launching the applications while the installation is in progress.
+Close Word and Excel and prevent the user from launching the applications while the deployment is in progress.
 ```
 
 
-Allow the user to defer the installation a maximum of 10 times or until the deadline is reached, whichever happens first.
+Allow the user to defer the deployment a maximum of 10 times or until the deadline is reached, whichever happens first.
 
 When deferral expires, prompt the user to close the applications and automatically close them after 10 minutes.
 
@@ -190,7 +190,7 @@ Accept wildcard characters: False
 
 ### -PersistPrompt
 
-Specify whether to make the Show-ADTInstallationWelcome prompt persist in the center of the screen every couple of seconds, specified in the AppDeployToolkitConfig.xml.
+Specify whether to make the Show-ADTInstallationWelcome prompt persist in the center of the screen every couple of seconds, specified in the config.psd1.
 The user will have no option but to respond to the prompt.
 This only takes effect if deferral is not allowed or has expired.
 
@@ -208,7 +208,7 @@ Accept wildcard characters: False
 
 ### -BlockExecution
 
-Option to prevent the user from launching processes/applications, specified in -CloseProcesses, during the installation.
+Option to prevent the user from launching processes/applications, specified in -CloseProcesses, during the deployment.
 
 ```yaml
 Type: SwitchParameter
@@ -224,7 +224,7 @@ Accept wildcard characters: False
 
 ### -AllowDefer
 
-Enables an optional defer button to allow the user to defer the installation.
+Enables an optional defer button to allow the user to defer the deployment.
 
 ```yaml
 Type: SwitchParameter
@@ -240,7 +240,7 @@ Accept wildcard characters: False
 
 ### -AllowDeferCloseProcesses
 
-Enables an optional defer button to allow the user to defer the installation only if there are running applications that need to be closed.
+Enables an optional defer button to allow the user to defer the deployment only if there are running applications that need to be closed.
 This parameter automatically enables -AllowDefer
 
 ```yaml
@@ -257,7 +257,7 @@ Accept wildcard characters: False
 
 ### -DeferTimes
 
-Specify the number of times the installation can be deferred.
+Specify the number of times the deployment can be deferred.
 
 ```yaml
 Type: UInt32
@@ -273,7 +273,7 @@ Accept wildcard characters: False
 
 ### -DeferDays
 
-Specify the number of days since first run that the installation can be deferred.
+Specify the number of days since first run that the deployment can be deferred.
 This is converted to a deadline.
 
 ```yaml
@@ -290,7 +290,7 @@ Accept wildcard characters: False
 
 ### -DeferDeadline
 
-Specify the deadline date until which the installation can be deferred.
+Specify the deadline date until which the deployment can be deferred.
 
 Specify the date in the local culture if the script is intended for that same culture.
 
@@ -314,7 +314,7 @@ Accept wildcard characters: False
 
 ### -CheckDiskSpace
 
-Specify whether to check if there is enough disk space for the installation to proceed.
+Specify whether to check if there is enough disk space for the deployment to proceed.
 
 If this parameter is specified without the RequiredDiskSpace parameter, the required disk space is calculated automatically based on the size of the script source and associated files.
 
@@ -381,7 +381,7 @@ Accept wildcard characters: False
 
 ### -ForceCountdown
 
-Specify a countdown to display before automatically proceeding with the installation when a deferral is enabled.
+Specify a countdown to display before automatically proceeding with the deployment when a deferral is enabled.
 
 ```yaml
 Type: UInt32
@@ -449,7 +449,7 @@ Accept wildcard characters: False
 ### -Title
 
 Title of the prompt.
-Default: the application installation name.
+Default: the application deployment name.
 
 ```yaml
 Type: String
@@ -483,7 +483,7 @@ An active ADT session is NOT required to use this function.
 The process descriptions are retrieved via Get-Process, with a fall back on the process name if no description is available.
 Alternatively, you can specify the description yourself with a '=' symbol - see examples.
 
-The dialog box will timeout after the timeout specified in the config.psd1 file (default 55 minutes) to prevent Intune/SCCM installations from timing out and returning a failure code.
+The dialog box will timeout after the timeout specified in the config.psd1 file (default 55 minutes) to prevent Intune/SCCM deployments from timing out and returning a failure code.
 When the dialog times out, the script will exit and return a 1618 code (SCCM fast retry code).
 
 Tags: psadt
